--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -236,7 +236,7 @@ where $j_{S1}$ and $j_{S2}$ are the specific input fluxes of the two substrates 
 # Steady state behavior
 In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. However, under some conditions, either of these outcomes may occur depending on initial values of symbiont and host biomass, indicating the presence of alternate stable states (Fig. 2). The mechanism that produces these alternate stable states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis: if symbiont biomass is initially very low (i.e., a "bleached" coral), very little carbon is fixed, and the system cannot escape this positive feedback and cannot grow (unless feeding is sufficiently high). However, if symbiont biomass is initially high (i.e., a "healthy" coral), then the system remains in a nitrogen-limited state with positive growth. For practical purposes, this section of the manuscript considers only positive growth steady states under constant environments; subsequently, we explore how environmental forcing may cause the system to switch between alternate stable states, which we interpret in the context of coral bleaching (see "Coral Bleaching and Recovery", below).
 
-![Alternate stable states in S:H biomass and growth across a light gradient. Alternate stable states occur between ~25-42 mol photons m^-2^ d^-1^ under these conditions (DIN=1e-7 molN L^-1^; X=1e-7 CmolX L^-1^), depending on whether initial S:H is high (1, closed circles), representing a healthy coral, or low (0.0001, open circles), representing a bleached coral. Arrow above point at L=25 indicates a S:H ratio beyond the axis range; this 'overshoot' phenomenon, in which initially  bleached corals may achieve high S:H ratios while remaining in a carbon-limited state is discussed in the *Coral Bleaching and Recovery* section.](../img/Fig2.png)
+![Alternate stable states in S:H biomass and growth across a light gradient. Alternate stable states occur between ~25-42 mol photons m^-2^ d^-1^ under these conditions (DIN=1e-7 mol N L^-1^; X=1e-7 C-mol X L^-1^), depending on whether initial S:H is high (1, closed circles), representing a healthy coral, or low (0.0001, open circles), representing a bleached coral. Arrow above point at L=25 indicates a S:H ratio beyond the axis range; this 'overshoot' phenomenon, in which initially  bleached corals may achieve high S:H ratios while remaining in a carbon-limited state is discussed in the *Coral Bleaching and Recovery* section.](../img/Fig2.png)
 
 To analyze positive-growth steady state behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 3), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 3A). Low light limits photosynthetic rates, resulting in less fixed carbon shared with the host and an associated increase in the symbiont to host biomass ratio (Fig. 3B). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, host growth becomes less carbon-limited.
 
