remake after fix ss oscill filter

--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -1173,13 +1173,13 @@ stable states, which we interpret in the context of coral bleaching (see
 \caption{Alternate stable states in S:H biomass and growth across a
 light gradient. Alternate stable states occur between
 \textasciitilde{}25-42 mol photons m\textsuperscript{-2}
-d\textsuperscript{-1} under these conditions (DIN=1e-7 molN
-L\textsuperscript{-1}; X=1e-7 CmolX L\textsuperscript{-1}), depending on
-whether initial S:H is high (1, closed circles), representing a healthy
-coral, or low (0.0001, open circles), representing a bleached coral.
-Arrow above point at L=25 indicates a S:H ratio beyond the axis range;
-this `overshoot' phenomenon, in which initially bleached corals may
-achieve high S:H ratios while remaining in a carbon-limited state is
+d\textsuperscript{-1} under these conditions (DIN=1e-7 mol N
+L\textsuperscript{-1}; X=1e-7 C-mol X L\textsuperscript{-1}), depending
+on whether initial S:H is high (1, closed circles), representing a
+healthy coral, or low (0.0001, open circles), representing a bleached
+coral. Arrow above point at L=25 indicates a S:H ratio beyond the axis
+range; this `overshoot' phenomenon, in which initially bleached corals
+may achieve high S:H ratios while remaining in a carbon-limited state is
 discussed in the \emph{Coral Bleaching and Recovery} section.}
 \end{figure}
 
