--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -680,7 +680,7 @@ photosynthesis
 Maximum prey assimilation rate from host feeding
 \strut\end{minipage} &
 \begin{minipage}[t]{0.25\columnwidth}\raggedright\strut
-molX C-mol H\textsuperscript{-1} d\textsuperscript{-1}
+C-mol X C-mol H\textsuperscript{-1} d\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.12\columnwidth}\raggedright\strut
 \(0.13\)
@@ -692,7 +692,7 @@ molX C-mol H\textsuperscript{-1} d\textsuperscript{-1}
 Half-saturation constant for prey assimilation
 \strut\end{minipage} &
 \begin{minipage}[t]{0.25\columnwidth}\raggedright\strut
-molX L\textsuperscript{-1}
+C-mol X L\textsuperscript{-1}
 \strut\end{minipage} &
 \begin{minipage}[t]{0.12\columnwidth}\raggedright\strut
 \(10^{-6}\)
